dev/message/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message
  namespace: dev
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8005
  selector: 
    app: message
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: message-deployment
  namespace: dev
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: message
    spec:
      containers:
      - name: message
        image: rocketchat/rocket.chat:latest
        ports:
        - containerPort: 8005
        livenessProbe:
          httpGet:
            path: /
            port: 8005
          initialDelaySeconds: 60
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - mountPath: /app/uploads
          name: message-data-volume
      volumes:
      - name: message-data-volume
        persistentVolumeClaim:
          claimName: dev-message-data-volume-claim
