dev/message/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: message-ingress
  namespace: dev
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - message-dev.gccollab.ca
    secretName: message-secret
  rules:
  - host: message-dev.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: message
          servicePort: 8005
